--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,12 @@ a:hover {
   margin-left: 30px;
 }
 
+.sneakers-img {
+  width: 20%;
+  float: left;
+  margin-right: 30px;
+}
+
 .btn {
   background: #11cdd4;
   border-radius: 8px;
