--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,12 @@ a:hover {
   margin-right: 30px;
 }
 
+.books-img {
+  width: 20%;
+  float: right;
+  margin-left: 30px;
+}
+
 .btn {
   background: #11cdd4;
   border-radius: 8px;
