--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,28 @@
 body {
-  color: #40514E;
+  color: #40514e;
   margin: 0;
   text-align: center;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
 }
 
 h1 {
-  color: #66BFBF;
+  color: #66bfbf;
   font-size: 3rem;
   margin: 50px auto 0 auto;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h2 {
-  color: #66BFBF;
-  font-family: 'Montserrat', sans-serif;
+  color: #66bfbf;
+  font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
   font-weight: normal;
   padding-bottom: 10px;
 }
 
 h3 {
-  color: #11999E;
-  font-family: 'Montserrat', sans-serif;
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
 }
 
 p {
@@ -30,25 +30,25 @@ p {
 }
 
 hr {
-  border: dotted #EAF6F6 6px;
+  border: dotted #eaf6f6 6px;
   border-bottom: none;
   width: 4%;
   margin: 100px auto;
 }
 
-a{
-  color: #11999E;
-  font-family: 'Montserrat', sans-serif;
+a {
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
   margin: 10px 20px;
   text-decoration: none;
 }
 
 a:hover {
-  color: #EAF6F6;
+  color: #eaf6f6;
 }
 
 .top-container {
-  background-color: #E4F9F5;
+  background-color: #e4f9f5;
   position: relative;
   padding-top: 100px;
 }
@@ -58,7 +58,7 @@ a:hover {
 }
 
 .bottom-container {
-  background-color: #66BFBF;
+  background-color: #66bfbf;
   padding: 50px 0 20px;
 }
 
@@ -83,7 +83,7 @@ a:hover {
 }
 
 .copyright {
-  color: #EAF6F6;
+  color: #eaf6f6;
   font-size: 0.75rem;
   padding: 20px 0;
 }
@@ -124,10 +124,16 @@ a:hover {
   margin-left: 30px;
 }
 
+.burger-img {
+  width: 15%;
+  float: left;
+  margin-right: 30px;
+}
+
 .btn {
   background: #11cdd4;
   border-radius: 8px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #ffffff;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
