--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body {
   color: #40514e;
-  margin: 0;
   text-align: center;
   font-family: "Merriweather", serif;
 }
@@ -47,15 +46,9 @@ a:hover {
   color: #eaf6f6;
 }
 
-.top-container {
-  background-color: #e4f9f5;
-  position: relative;
-  padding-top: 100px;
-}
-
 .middle-container {
   margin: 100px 0;
-}
+} 
 
 .bottom-container {
   background-color: #66bfbf;
@@ -68,16 +61,12 @@ a:hover {
   text-align: left;
 }
 
-.pro {
-  text-decoration: underline;
-}
-
 .intro {
-  width: 30%;
+  width: 50%;
   margin: auto;
 }
 
-.contact-message {
+ .contact-me {
   width: 40%;
   margin: 40px auto 60px;
 }
@@ -86,48 +75,6 @@ a:hover {
   color: #eaf6f6;
   font-size: 0.75rem;
   padding: 20px 0;
-}
-
-.top-cloud {
-  position: absolute;
-  right: 300px;
-  top: 40px;
-}
-
-.bottom-cloud {
-  position: absolute;
-  left: 250px;
-  bottom: 300px;
-}
-
-.code-img {
-  width: 25%;
-  float: left;
-  margin-right: 30px;
-}
-
-.notebook-img {
-  width: 20%;
-  float: right;
-  margin-left: 30px;
-}
-
-.sneakers-img {
-  width: 20%;
-  float: left;
-  margin-right: 30px;
-}
-
-.books-img {
-  width: 20%;
-  float: right;
-  margin-left: 30px;
-}
-
-.burger-img {
-  width: 15%;
-  float: left;
-  margin-right: 30px;
 }
 
 .btn {
@@ -143,4 +90,4 @@ a:hover {
 .btn:hover {
   background: #30e3cb;
   text-decoration: none;
-}
+} 
