--- a/css/styles.css
+++ b/css/styles.css
@@ -29,36 +29,51 @@ p {
 }
 
 hr {
-  border: dotted #eaf6f6 6px;
+  border: dotted #79adad65 6px;
   border-bottom: none;
   width: 4%;
-  margin: 100px auto;
+  margin: 75px auto;
 }
 
-a {
-  color: #11999e;
-  font-family: "Montserrat", sans-serif;
-  margin: 10px 20px;
-  text-decoration: none;
+.container-fluid{
+  padding: 1% 15%;
 }
 
-a:hover {
-  color: #eaf6f6;
-}
 
 .middle-container {
-  margin: 100px 0;
+  margin: 50px 0;
 } 
 
-.bottom-container {
-  background-color: #66bfbf;
-  padding: 50px 0 20px;
+.middle-container h3 {
+  margin: 25px 0;
+  color: #66bfbf;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.3rem;
+  font-weight: normal;
+  padding-bottom: 10px;
+} 
+
+
+#features {
+  position: relative;
 }
 
-.skill-row {
-  width: 50%;
-  margin: 100px auto 100px auto;
-  text-align: left;
+.feature-box {
+  padding: 4.5%;
+}
+
+.text-box {
+  width: 75%;
+  margin: 0 auto;
+}
+
+.icon {
+  color: #11999e;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
 }
 
 .intro {
@@ -66,7 +81,7 @@ a:hover {
   margin: auto;
 }
 
- .contact-me {
+.contact-me {
   width: 40%;
   margin: 40px auto 60px;
 }
@@ -87,7 +102,30 @@ a:hover {
   text-decoration: none;
 }
 
+.link {
+  margin: 10px auto;
+  text-align: center;
+}
+
 .btn:hover {
-  background: #30e3cb;
+  background: #ff4c68;
   text-decoration: none;
+  color: #ffffff;
+} 
+
+.bottom-container {
+  background-color: #66bfbf;
+  padding: 50px 0 20px;
+}
+
+.footer-link {
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
+  padding: 10px 15px 10px 15px;
+  text-decoration: none;
+}
+
+.footer-link:hover {
+  text-decoration: none;
+  color: #ffffff;
 } 
